kube-system/nginx/nginx-external/external_minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-minio
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: minio.eviljungle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-minio
            port:
              number: 9000
  tls:
  - hosts:
    - minio.eviljungle.com
---
apiVersion: v1
kind: Service
metadata:
  name: external-minio
  namespace: default
spec:
  ports:
  - name: minio
    port: 9000
  type: ExternalName
  externalName: truenas
