kube-system/nginx/nginx-external/external_nvr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-nvr
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nvr.eviljungle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-nvr
            port:
              number: 81
  tls:
  - hosts:
    - nvr.eviljungle.com
---
apiVersion: v1
kind: Service
metadata:
  name: external-nvr
spec:
  ports:
  - name: http
    port: 81
  type: ExternalName
  externalName: 10.0.7.13
