kube-system/nginx/nginx-external/external_prox.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-prox
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/preserve-host: "true"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.eviljungle.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: https://auth.eviljungle.com/oauth2/start
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16"
spec:
  rules:
  - host: prox.eviljungle.com
    http:
      paths:
      - path: /
        backend:
            serviceName: external-prox
            servicePort: 8006
      - path: /
        backend:
            serviceName: external-prox-b
            servicePort: 8006
      - path: /
        backend:
            serviceName: external-prox-c
            servicePort: 8006
      - path: "/vncwebsocket.*"
        backend:
            serviceName: external-prox-wss
            servicePort: 8006
      - path: "/vncwebsocket.*"
        backend:
            serviceName: external-prox-b-wss
            servicePort: 8006
      - path: "/vncwebsocket.*"
        backend:
            serviceName: external-prox-c-wss
            servicePort: 8006
  tls:
  - hosts:
    - prox.eviljungle.com   
---
apiVersion: v1
kind: Service
metadata:
  name: external-prox
spec:
  ports:
  - name: https
    port: 8006
  type: ExternalName
  externalName: 10.0.7.7
---
apiVersion: v1
kind: Service
metadata:
  name: external-prox-b
spec:
  ports:
  - name: https
    port: 8006
  type: ExternalName
  externalName: 10.0.7.9
---
apiVersion: v1
kind: Service
metadata:
  name: external-prox-c
spec:
  ports:
  - name: https
    port: 8006
  type: ExternalName
  externalName: 10.0.7.14
---
apiVersion: v1
kind: Service
metadata:
  name: external-prox-wss
spec:
  ports:
  - name: wss
    port: 8006
  type: ExternalName
  externalName: 10.0.7.7
---
apiVersion: v1
kind: Service
metadata:
  name: external-prox-b-wss
spec:
  ports:
  - name: wss
    port: 8006
  type: ExternalName
  externalName: 10.0.7.9
---
apiVersion: v1
kind: Service
metadata:
  name: external-prox-c-wss
spec:
  ports:
  - name: wss
    port: 8006
  type: ExternalName
  externalName: 10.0.7.14
