kube-system/nginx/nginx-external/external_truenas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-truenas
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.eviljungle.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: https://auth.eviljungle.com/oauth2/start
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16"
spec:
  rules:
  - host: truenas.eviljungle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-truenas
            port:
              number: 443
  tls:
  - hosts:
    - truenas.eviljungle.com
---
apiVersion: v1
kind: Service
metadata:
  name: external-truenas
  namespace: default
spec:
  ports:
  - name: https
    port: 443
  type: ExternalName
  externalName: truenas
